# hse-ml-managers

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
mba/: eval.ipynb  mba.ipynb  mba_final.ipynb  mba_info.ipynb  mba_solution.ipynb  mba_wip.ipynb  mba_wip_fin.ipynb  mba_wip_llm.ipynb
mba/.ipynb_checkpoints/: mba_solution-checkpoint.ipynb
mba/data/: info.txt  load_data_test.csv  loan_data.csv  loan_data.xlsx  test_data.csv  test_targets.csv
mba/data_pre_edit/: test_data.csv
mba/src/: business.py  const.py  dataset_edits.py  features.py  modeling.py  transforms.py  vis.py
project/: create_dataset.py  create_llm_feats.py  dataset.ipynb  dataset_exp.ipynb  incomplete_data.csv  project_info.ipynb  train.py
project/data/: llm_essay_feats.pkl  test_private.csv  test_public.csv  test_public_no_answers.csv  word_synonyms.json
project/data/kaggle/: submission_example.csv  test_feat.csv  test_targets.csv  train.csv
seminars/: sem1_solution.ipynb  sem2-5.ipynb  sem2.ipynb  sem3.ipynb  sem4.ipynb  sem4_solution.ipynb  sem5.ipynb  sem5_solution.ipynb
seminars-2024/: sem1_solution.ipynb  sem2-5.ipynb  sem2.ipynb  sem3.ipynb  sem4.ipynb  sem4_solution.ipynb  sem5.ipynb  sem5_solution.ipynb
seminars-2024/data/: anime_reviews.csv
seminars-2025/: sem1.ipynb  sem2.ipynb  sem3.ipynb  sem4.ipynb
seminars/data/: train.csv
src/mba/: business.py  const.py  modeling.py  vis.py
web/: index.html
web/css/: main.css
web/js/: actions.js  game.js
