[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
allow_redefinition = true
no_implicit_reexport = false

[project]
name = "hse-ml-managers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "catboost>=1.2.7",
    "data-science-types>=0.2.23",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "missingno>=0.5.2",
    "mypy>=1.13.0",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241009",
    "ruff>=0.7.4",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
    "types-requests>=2.32.0.20241016",
    "types-tqdm>=4.67.0.20241119",
]
