[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
disallow_untyped_calls = false
disallow_any_generics = false
disallow_subclassing_any = false
allow_redefinition = true
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "scipy.*",
    "seaborn.*",
    "catboost.*",
    "missingno.*",
    "transformers.*",
    "nltk.*",
    "joblib.*",
]
ignore_missing_imports = true

[project]
name = "hse-ml-managers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "catboost>=1.2.7",
    "gigachat>=0.1.36",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "missingno>=0.5.2",
    "mypy>=1.13.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241009",
    "ruff>=0.7.4",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
    "types-requests>=2.32.0.20241016",
    "types-tqdm>=4.67.0.20241119",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mba/src"]
