[tool.ruff]
line-length = 120

[tool.mypy]
allow_redefinition = true
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
follow_untyped_imports = true
no_implicit_reexport = false
strict = true
warn_return_any = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "catboost.*",
    "joblib.*",
    "missingno.*",
    "nltk.*",
    "scipy.*",
    "seaborn.*",
    "sklearn.*",
    "transformers.*",
]

[project]
dependencies = [
    "catboost>=1.2.7",
    "gigachat>=0.1.43",
    "jupyter>=1.1.1",
    "lightning>=2.5.6",
    "matplotlib>=3.9.2",
    "missingno>=0.5.2",
    "mypy>=1.13.0",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pandas-stubs>=2.2.3.241009",
    "pandas>=2.2.3",
    "ruff>=0.7.4",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "types-requests>=2.32.0.20241016",
    "types-tqdm>=4.67.0.20241119",
]
description = "Add your description here"
name = "hse-ml-managers"
readme = "README.md"
requires-python = "~=3.11.0"
version = "0.1.0"

[build-system]
build-backend = "uv_build"
requires = ["uv_build~=0.8.0"]

[tool.uv.build-backend]
module-name = "mba"
module-root = ""
